--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@ display: inline-block;
 position: relative;
 };
 
+
+.wrapper {
+    font-size: 60pt;
+    color: beige;
+    background-color: blue;
+    position: relative;
+    width: 70%;
+    height: 140px;
+}
+
+.btn {
+    
+}
