--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,16 @@
     text-align: center;
     align-content: center;
 }
+
+.form-control {
+    width: 80% !important;
+    margin: 10px auto;
+    align-content: center;
+    
+}
+
+exampleFormControlInput1 {
+    width: 80% !important;
+    margin: 10px auto;
+    align-content: center;
+}
